# chrysalide-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
config/: allowed_commands.yaml
docs/: agent-loop.md  agent-tools.md  architecture.md  configuration.md  getting-started.md  glossary.md  mcp-tools.md  providers.md  report-schema.md  roadmap.md  sandbox.md  security.md  testing.md
src/chrysalide/: __main__.py  models.py  sandbox.py  server.py
src/chrysalide/agent/: __init__.py  agent.py  state.py
src/chrysalide/agent/prompts/: act.md  correct.md  plan.md  system.md
src/chrysalide/agent/tools/: __init__.py  cmd_tools.py  fs_tools.py  git_tools.py
src/chrysalide/orchestrator/: __init__.py  engine.py  store.py
src/chrysalide/providers/: __init__.py  anthropic_provider.py  azure_apim_provider.py  azure_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/chrysalide/security/: config.py
tests/: test_agent_loop.py  test_fs_tools.py  test_openai_provider.py  test_sandbox.py  test_store.py
