[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chrysalide-mcp"
version = "0.1.0"
description = "Serveur MCP agentique avec sandbox git worktree et boucle plan-act-validate-correct"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
    "openai>=1.0",
    "anthropic>=0.25",
    "google-genai>=1.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "tiktoken>=0.5",
    "python-dotenv>=1.0",
    "tenacity>=8.0"
]
dynamic = ["readme"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "ruff>=0.1"
]

[project.scripts]
chrysalide = "chrysalide.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chrysalide"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E203", "E501", "W503"]

[tool.pytest.ini_options]
markers = [
    "unit",
    "integration",
    "e2e"
]
asyncio_mode = "auto"